--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ag-grid-react": "^32.3.3",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.15.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0"
   },
