--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^7.22.2",
     "ag-grid-react": "^32.3.3",
     "dayjs": "^1.11.13",
+    "file-saver": "^2.0.5",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-dom": "^18.3.1",
