--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "ag-grid-react": "^32.3.3",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "recharts": "^2.13.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
